Fix wrap/unwrap for the exec engine. Add collection tests